# conan-cmake-v2-example

./: CMakeLists.txt
example-fmt/src/: main.cc
example-libcurl/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
example-libcurl/build-win32-debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  conan_host_profile  example-libcurl.sln  example-libcurl.vcxproj  example-libcurl.vcxproj.filters
example-libcurl/build-win32-debug/.cmake/api/v1/reply/: cache-v2-d1a0758220b70fb1495d.json  cmakeFiles-v1-dd6555cdf159cea0123c.json  codemodel-v2-262b319b372134182949.json  index-2023-10-16T09-53-19-0978.json  target-ALL_BUILD-Debug-3a21ac147ea91b886408.json  target-ZERO_CHECK-Debug-e8868bd99dbeb7432039.json  target-example-libcurl-Debug-fc226d117a74fc7c1b32.json  target-example-libcurl-MinSizeRel-ef4bc0726e7dd88c9dcb.json  target-example-libcurl-RelWithDebInfo-55bfd8c2d6264b575106.json  target-example-libcurl-Release-8876d90cc353c97ea0bf.json  toolchains-v1-ee8513643e12543c7452.json
example-libcurl/build-win32-debug/example-libcurl.dir/Debug/: example-libcurl.exe.recipe
example-libcurl/build-win32-debug/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
example-libcurl/build-win32-debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
example-libcurl/src/: main.cc
example-zlib/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
example-zlib/src/: main.cc
